turtleart.kerr36.Kerr36.scala.error
Compilation error:
Kerr36:32: error: unclosed character literal
  forward(20)'
             ^Kerr36:32: error: ';' expected but something found.
  forward(20)'
             ^